build using heroku cmd

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:prod": "npm run build:client-and-server-bundles && npm run compile:server",
     "serve:ssr": "node dist/server",
     "heroku-prebuild": "echo This runs before Heroku installs your dependencies.",
-    "heroku-postbuild": "build:prod"
+    "heroku-postbuild": "npm run build:prod"
   },
   "private": true,
   "dependencies": {
